--- a/Advent of Code 2017.ipynb
+++ b/Advent of Code 2017.ipynb
@@ -675,13 +675,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 7, 0]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'copy' has no attribute 'deepCopy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-123-c7f7eb1ffae0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrState\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mincrement_bank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrState\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrState\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;31m# while not increment_bank(currState) in states:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-123-c7f7eb1ffae0>\u001b[0m in \u001b[0;36mincrement_bank\u001b[1;34m(state)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0madder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mnewState\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepCopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mnewState\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0madder\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'copy' has no attribute 'deepCopy'"
+     ]
+    }
+   ],
    "source": [
-    "file = 'day6-input.txt'"
+    "import numpy\n",
+    "import copy\n",
+    "\n",
+    "file = 'day6-input.txt'\n",
+    "\n",
+    "states = []\n",
+    "bank = [0, 2, 7, 0]\n",
+    "\n",
+    "# with open(file) as l:\n",
+    "#     bank = [int(j) for j in (l.readline()).split()]\n",
+    "\n",
+    "\n",
+    "def increment_bank(state):\n",
+    "    adder = max(state)\n",
+    "    index = numpy.argmax(state)\n",
+    "    newState = copy.deepCopy(state)\n",
+    "    newState[index] = 0\n",
+    "    while adder > 0:\n",
+    "        if adder >= len(newState):\n",
+    "            newState = [i + 1 for i in newState]\n",
+    "            adder -= len(newState)\n",
+    "        elif adder < len(newState) and adder > index:\n",
+    "            for i in range(index + 1, len(newState)):\n",
+    "                newState[i] += 1\n",
+    "                adder -= 1\n",
+    "        elif adder < len(newState) and adder <= index:\n",
+    "            for i in range(0, adder):\n",
+    "                newState[i] += 1\n",
+    "                adder -= 1\n",
+    "    return newState\n",
+    "\n",
+    "currState = bank\n",
+    "cycles = 0\n",
+    "\n",
+    "print(currState)\n",
+    "print(increment_bank(currState))\n",
+    "print(currState)\n",
+    "# while not increment_bank(currState) in states:\n",
+    "#     currState = increment_bank(currState)\n",
+    "#     states.append(currState)\n",
+    "#     cycles += 1\n",
+    "\n",
+    "print(states)\n",
+    "print(cycles)"
    ]
   },
   {
