--- a/Advent of Code 2017.ipynb
+++ b/Advent of Code 2017.ipynb
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -867,6 +867,161 @@
     "    return newDict\n",
     "\n",
     "#print(tree_sort(unsorted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --- Day 8: I Heard You Like Registers ---\n",
+    "\n",
+    "You receive a signal directly from the CPU. Because of your recent assistance with jump instructions, it would like you to compute the result of a series of unusual register instructions.\n",
+    "\n",
+    "Each instruction consists of several parts: the register to modify, whether to increase or decrease that register's value, the amount by which to increase or decrease it, and a condition. If the condition fails, skip the instruction without modifying the register. The registers all start at 0. The instructions look like this:\n",
+    "```\n",
+    "b inc 5 if a > 1\n",
+    "a inc 1 if b < 5\n",
+    "c dec -10 if a >= 1\n",
+    "c inc -20 if c == 10\n",
+    "```\n",
+    "These instructions would be processed as follows:\n",
+    "\n",
+    "Because a starts at 0, it is not greater than 1, and so b is not modified.  \n",
+    "a is increased by 1 (to 1) because b is less than 5 (it is 0).  \n",
+    "c is decreased by -10 (to 10) because a is now greater than or equal to 1 (it is 1).  \n",
+    "c is increased by -20 (to -10) because c is equal to 10.  \n",
+    "After this process, the largest value in any register is 1.  \n",
+    "\n",
+    "You might also encounter <= (less than or equal to) or != (not equal to). However, the CPU doesn't have the bandwidth to tell you what all the registers are named, and leaves that to you to determine.\n",
+    "\n",
+    "What is the largest value in any register after completing the instructions in your puzzle input?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'acc': 808, 'ar': 8022, 'bb': 4216, 'bq': -2080, 'cli': -926, 'ec': -926, 'ej': 2428, 'fe': -2561, 'foz': -4818, 'h': 2737, 'hb': -3629, 'ln': 7297, 'nev': -1206, 'nfo': -547, 'piw': 556, 'qym': 5172, 're': -1201, 's': 106, 'tem': 5219, 'tl': 1118, 'u': 755, 'xuu': -5571, 'yxr': 542}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "file = 'day8-input.txt'\n",
+    "\n",
+    "instructions = [\n",
+    "    \"b inc 5 if a > 1\",\n",
+    "    \"a inc 1 if b < 5\",\n",
+    "    \"c dec -10 if a >= 1\",\n",
+    "    \"c inc -20 if c == 10\"\n",
+    "]\n",
+    "\n",
+    "instructions = []\n",
+    "\n",
+    "for line in open(file):\n",
+    "    instructions.append(line.rstrip())\n",
+    "\n",
+    "registers = numpy.unique([(i.split())[0] for i in instructions])\n",
+    "registerValues = dict(map(lambda reg: (reg, 0), registers))\n",
+    "\n",
+    "\n",
+    "def parse_instruction(arrName, regs, instruction):\n",
+    "    instrList = instruction.split(\" \")\n",
+    "    evalMap = ['>', '<', '==', '!=', '>=', '<=']\n",
+    "    incMap = {'inc': '+=', 'dec': '-='}\n",
+    "    if not instrList[3] == 'if' and not instrList[5] in evalMap and not instrList[1] in incMap:\n",
+    "        raise SyntaxError('Invalid instruction syntax')\n",
+    "    regEvaluator = arrName + '[\\'' + [x for x in regs if x == instrList[4]][0] + '\\']'\n",
+    "    regCalculator = arrName + '[\\'' + [y for y in regs if y == instrList[0]][0] + '\\']'\n",
+    "    parsedInstruction = str(f'if {regEvaluator} {instrList[5]} {instrList[6]}:\\r\\n    {regCalculator} {incMap[instrList[1]]} {instrList[2]}')\n",
+    "    return parsedInstruction\n",
+    "\n",
+    "for i in instructions:\n",
+    "#     print(parse_instruction(\"registerValues\", registers, i))\n",
+    "    exec(parse_instruction(\"registerValues\", registers, i))\n",
+    "\n",
+    "print(registerValues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## --- Part Two ---\n",
+    "\n",
+    "To be safe, the CPU also needs to know the highest value held in any register during this process so that it can decide how much memory to allocate to these operations. For example, in the above instructions, the highest value ever held was 10 (in register c after the third instruction was evaluated)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'acc': 808, 'ar': 8022, 'bb': 4216, 'bq': -2080, 'cli': -926, 'ec': -926, 'ej': 2428, 'fe': -2561, 'foz': -4818, 'h': 2737, 'hb': -3629, 'ln': 7297, 'nev': -1206, 'nfo': -547, 'piw': 556, 'qym': 5172, 're': -1201, 's': 106, 'tem': 5219, 'tl': 1118, 'u': 755, 'xuu': -5571, 'yxr': 542}\n",
+      "9819\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "file = 'day8-input.txt'\n",
+    "\n",
+    "instructions = []\n",
+    "for line in open(file):\n",
+    "    instructions.append(line.rstrip())\n",
+    "\n",
+    "registers = numpy.unique([(i.split())[0] for i in instructions])\n",
+    "registerValues = dict(map(lambda reg: (reg, 0), registers))\n",
+    "\n",
+    "highestValue = int()\n",
+    "\n",
+    "def parse_instruction(arrName, regs, instruction):\n",
+    "    instrList = instruction.split(\" \")\n",
+    "    evalMap = ['>', '<', '==', '!=', '>=', '<=']\n",
+    "    incMap = {'inc': '+=', 'dec': '-='}\n",
+    "    if not instrList[3] == 'if' and not instrList[5] in evalMap and not instrList[1] in incMap:\n",
+    "        raise SyntaxError('Invalid instruction syntax')\n",
+    "    regEvaluator = arrName + '[\\'' + [x for x in regs if x == instrList[4]][0] + '\\']'\n",
+    "    regCalculator = arrName + '[\\'' + [y for y in regs if y == instrList[0]][0] + '\\']'\n",
+    "    parsedInstruction = str(f'if {regEvaluator} {instrList[5]} {instrList[6]}:\\r\\n    {regCalculator} {incMap[instrList[1]]} {instrList[2]}')\n",
+    "    parsedInstruction += str(f'\\r\\nif highestValue < max([int(z) for k, z in registerValues.items()]):\\r\\n    highestValue = max([int(z) for k, z in registerValues.items()])')\n",
+    "    return parsedInstruction\n",
+    "\n",
+    "for i in instructions:\n",
+    "#     print(parse_instruction(\"registerValues\", registers, i))\n",
+    "    exec(parse_instruction(\"registerValues\", registers, i))\n",
+    "\n",
+    "print(registerValues)\n",
+    "print(highestValue)"
    ]
   }
  ],
